--- a/ang-game/src/app/views/footer/footer.component.html
+++ b/ang-game/src/app/views/footer/footer.component.html
@@ -1,1 +1,68 @@
-<p>footer works!</p>
+<mat-toolbar class="footer">
+    <div class="line">
+        <a href="">
+            <ul>
+                <li>
+                    Anuncie Conosco
+                </li>
+            </ul>
+        </a>
+        <a href="">
+            <ul>
+                <li class="list">
+                    Quem Somos
+                </li>
+            </ul>
+        </a>
+        <a href="">
+            <ul>
+                <li class="list">
+                    Trabalhe Conosco
+                </li>
+            </ul>
+        </a>
+        <a href="">
+            <ul style="margin-bottom: 20px;">
+                <li class="list">
+                    SAC
+                </li>
+            </ul>
+        </a>
+    </div>
+    
+    <div class="icon">
+        <span class="cards">
+            <p class="pag">
+                Pagamento
+            </p>
+            
+            <img class="pix" src="assets/img/logo-pix-icone-256.png" alt="pix">
+                        
+            <img class="paypal" src="assets/img/money 1.png" alt="paypal">
+                        
+            <img class="master" src="assets/img/master.png" alt="mastercard">
+                        
+            <img class="amex" src="assets/img/amex.png" alt="amex">
+                        
+            <img class="amex" src="assets/img/visa.png" alt="visa">            
+        </span>
+    </div>
+
+    <div class="network">
+        <span>
+             <p class="social">Redes Sociais</p> 
+        </span>
+        <span class="logos">
+            <a href="#">
+                <img class="logo-face" src="assets/img/facebook 2.png" alt="logo face">
+            </a>
+            <a href="#">
+                <img src="assets/img/instagram 2.png" alt="logo insta">
+            </a>
+            <a href="#">
+                <img src="assets/img/whatsapp 1.png" alt="">
+            </a>
+        </span>        
+    </div>
+
+</mat-toolbar>
