--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -1,1 +1,168 @@
-<p>home works!</p>
+<!--SEÇÃO GAMER-->
+<p class="gamer">G A M E R</p>
+<ul class="container">
+    <li>
+        <a href="#" class="link1">
+            <p class="legenda">Placa de Vídeo Gainward <br> NVidia GeForce</p>
+        </a>
+        <a href="#">
+            <img class="placa" src="../assets/img/placa de video.png" width="250">
+        </a>
+        <a href="#" class="price">
+            <p class="price">R$ 5.099,00</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="#" class="link1">
+            <p class="legenda">Cadeira Gamer Log Gaming</p>
+        </a>
+        <a href="#">
+            <img class="cadeira" src="../assets/img/cadeira gamer.png" width="250">
+        </a>
+        <a href="#" class="price">
+            <p class="price">R$ 1.119,00</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="#" class="link1">
+            <p class="legenda">Headset Gamer Motospeed G750</p>
+        </a>
+        <a href="#">
+            <img class="headset" src="../assets/img/headset gamer.png" width="250">
+        </a>
+        <a href="#" class="price">
+            <p class="price">R$ 129,00</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="#" class="link1">
+            <p class="legenda">Mouse Gamer Havit</p>
+        </a>
+        <a href="#" class="mouse">
+            <img src="../assets/img/mouse gamer.png" width="250">
+        </a>
+        <a href="#" class="price">
+            <p class="price">R$ 99,00</p>
+        </a>
+    </li>
+</ul>
+
+<a href="#" style="text-decoration: none; color: black; font-size:larger;align-items: center;"><p class="more">ver mais</p></a>
+
+<!-- SEÇÃO INFORMÁTICA -->
+<p class="info">I N F O R M Á T I C A</p>
+<ul class="container">
+    <li>
+        <a href="#" class="link1">
+            <p style="text-align: center; font-family: sans-serif;">Computador Desktop Login <br> Intel Core i3 9100 4gb ddr4 <br> ssd 240gb Windows 10</p>
+        </a>
+        <a href="#">
+            <img src="../assets/img/desktop.png" alt=""></a>
+            <a href="" style="text-decoration: none; color: black;">
+                <p style="text-align: center;" class="desktop">R$ 5.299,00</p>
+            </a>
+    </li>
+
+    <li>
+        <a href="" class="link1">
+            <p style="text-align: center; font-family: sans-serif;">Nobreak TS Shara UPS Senoidal <br> Universal 3200va 2 Baterias Internas <br> Bivolt USB 4450</p>
+        </a>
+        <a href="#">
+            <img class="nobreak" src="../assets/img/nobreak.png" alt="">
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <p style="text-align: center;" class="price">R$ 1.199,00</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="#" class="link1">
+            <p style="text-align: center; font-family: sans-serif;">Processador AMD Athlon 3000g <br> Dual Core 3 <br> 5 ghz Cache 5mb Am4</p>
+        </a>
+        <a href="#">
+            <img src="../assets/img/processador.png" alt="">
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <p style="text-align: center;" class="price">R$ 479,00</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="#" class="link1">
+            <p style="text-align: center; font-family: sans-serif;">Memoria 4gb ddr4 <br> 2666 Mhz Micron Cl19</p>
+        </a>
+        <a href="#">
+            <img class="memoria" src="../assets/img/memoria.png" alt="">
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <p style="text-align: center;" class="price">R$ 219,00</p>
+        </a>
+    </li>
+</ul>
+
+<a href="#" style="text-decoration: none;color: black;font-size:larger;align-items: center;"><p class="more">ver mais</p></a>
+
+<!-- SEÇÃO PROMOÇÕES -->
+<p style="text-align: center; margin-bottom: 50px" class="promo">P R O M O Ç Õ E S </p>
+<ul class="cont-promo">
+    <li>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="promo-game">
+                BATTLEFIELD
+            </p>
+            <img src="../assets/img/battle.png" alt="">
+        </a>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="preco">R$ 99,99</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="promo-game">
+                COUNTER STRIKE GO
+            </p>
+            <img src="../assets/img/cs go.png" alt="">  
+        </a>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="preco">R$ 89,90</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="promo-game">
+                FORTNITE
+            </p>
+            <img src="../assets/img/fortnite.png" alt="">
+        </a>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="preco">R$ 79,90</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="promo-game">
+                CALL OF DUTY
+            </p>
+            <img class="cl" src="../assets/img/call.png" alt="">
+        </a>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="preco">R$ 79,90</p>
+        </a>
+    </li>
+
+    <li>
+        <a href="" style="text-decoration: none; color:black">
+            <p class="promo-game">
+                GOD OF WAR
+            </p>
+            <img class="gd" src="../assets/img/gow.png" alt="">
+            <p class="preco">R$ 79,90</p>
+        </a>
+    </li>
+</ul>
