--- a/ang-game/src/app/app.component.html
+++ b/ang-game/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-carousel></app-carousel>
 <app-home></app-home>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
