--- a/ang-game/src/app/views/temp-carousel/temp-carousel.component.css
+++ b/ang-game/src/app/views/temp-carousel/temp-carousel.component.css
@@ -1,5 +1,5 @@
 ngb-carousel {
-    max-width: 90%;
+    max-width: 700px;
     margin: 50px auto;
 }
 ngb-carousel img {
@@ -17,7 +17,7 @@ ngb-carousel {
     display: flex !important;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.5s ease-in-out, visibility 0.5s;
+    transition: opacity 1.2s ease-in-out, visibility 1.2s;
     z-index: -1;
 }
 .carousel-item.active{
