--- a/ang-game/src/app/views/carousel/carousel.component.css
+++ b/ang-game/src/app/views/carousel/carousel.component.css
@@ -10,6 +10,9 @@ ngb-carousel {
     width: inherit;
     height: inherit;
 }
+ngb-carousel a{
+    text-decoration: none;
+}
 .carousel-inner {
     overflow: visible;
 }
