--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -45,7 +45,7 @@
             <img src="../assets/img/mouse gamer.png" width="250">
         </a>
         <a href="#" class="price">
-            <p class="price">R$ 99,00</p>
+            <p class="price1">R$ 99,00</p>
         </a>
     </li>
 </ul>
@@ -74,7 +74,7 @@
             <img class="nobreak" src="../assets/img/nobreak.png" alt="">
         </a>
         <a href="#" style="text-decoration: none; color: black;">
-            <p style="text-align: center;" class="price">R$ 1.199,00</p>
+            <p style="text-align: center; margin-top: 10px;" class="price">R$ 1.199,00</p>
         </a>
     </li>
 
@@ -98,7 +98,7 @@
             <img class="memoria" src="../assets/img/memoria.png" alt="">
         </a>
         <a href="#" style="text-decoration: none; color: black;">
-            <p style="text-align: center;" class="price">R$ 219,00</p>
+            <p style="text-align: center; margin-top: 15px;" class="price">R$ 219,00</p>
         </a>
     </li>
 </ul>
@@ -137,7 +137,7 @@
             <p class="promo-game">
                 FORTNITE
             </p>
-            <img src="../assets/img/fortnite.png" alt="">
+            <img src="../assets/img/fortnite.png" alt="">  
         </a>
         <a href="" style="text-decoration: none; color:black">
             <p class="preco">R$ 79,90</p>
@@ -162,7 +162,7 @@
                 GOD OF WAR
             </p>
             <img class="gd" src="../assets/img/gow.png" alt="">
-            <p class="preco">R$ 79,90</p>
+            <p class="preco">R$ 49,90</p>
         </a>
     </li>
 </ul>
