--- a/ang-game/src/app/views/home/home.component.css
+++ b/ang-game/src/app/views/home/home.component.css
@@ -1,6 +1,6 @@
 ul{
     display: flex;
-    width: 95%;
+    width: 97%;
     list-style: none;
     text-decoration: none;
     justify-content: space-between;
@@ -86,6 +86,9 @@ ul{
     text-align: center;
     text-decoration: none;
 }
+.price1{
+    margin-top: 12px;
+}
 .cont-promo{
     width: 95%;
     justify-content: space-between;
@@ -93,7 +96,7 @@ ul{
 }
 .preco{
     background-color: #218EF2;
-    width: 80px; height: 20px;
+    width: 80px; height: 30px;
     border-radius: 10px;
     text-align: center;
     padding: 6px;
