--- a/ang-game/src/app/views/index1/index1.component.html
+++ b/ang-game/src/app/views/index1/index1.component.html
@@ -1,1 +1,65 @@
-<p>index1 works!</p>
+<h1 class="h11">A C E S S Ó R I O S</h1>
+<section class="flexbox">
+    <div>
+        <a href="" class="img1">
+            <img src="assets/img/adaptadores.png" alt="">
+        </a>
+        <a href="" class="link">
+            <p>Adaptadores</p>
+        </a>
+    </div>
+
+    <div>
+        <a href="" class="img2">
+            <img src="assets/img/caixas de som.png" alt="">
+        </a>
+        <a href="" class="link">
+            <p>Caixas de Som</p>
+        </a>
+    </div>
+
+    <div>
+        <a href="" class="img3">
+            <img src="assets/img/joysticks.png" alt="">
+        </a>
+        <a href="" class="link">
+            <p>Joysticks</p>
+        </a>
+    </div>
+
+    <div>
+        <a href="" class="img4">
+            <img src="assets/img/microfone.png" alt="">
+        </a>
+        <a href="" class="link2">
+            <p>Microfones</p>
+        </a>
+    </div>
+
+    <div>
+        <a href="" class="img5">
+            <img src="assets/img/mouse pad.png" alt="">
+        </a>
+        <a href="" class="link">
+            <p>Mouses Pad</p>
+        </a>
+    </div>
+
+    <div>
+        <a href="" class="img6">
+            <img src="assets/img/suportes.png" alt="">
+        </a>
+        <a href="" class="link">
+            <p>Suportes</p>
+        </a>
+    </div>
+
+    <div>
+        <a href="" class="img1">
+            <img src="assets/img/web cam.png" alt="">
+        </a>
+        <a href="" class="link">
+            <p>Web Cam</p>
+        </a>
+    </div>
+</section>
