--- a/ang-game/src/app/views/index1/index1.component.html
+++ b/ang-game/src/app/views/index1/index1.component.html
@@ -1,5 +1,54 @@
 <h1 class="h11">A C E S S Ó R I O S</h1>
-<section class="flexbox">
+<div class="flexbox" fxLayout="row" fxLayoutAlign="center center">
+    <div fxFlex="40%">
+        <img class="img1" src="assets/img/adaptadores.png" alt="">
+        <a href="" class="link">
+            <p class="legenda">Adaptadores</p>
+        </a>
+    </div>
+
+    <div fxFlex="40%">
+        <img class="img2" src="assets/img/caixas de som.png" alt="">
+        <a href="" class="link">
+            <p class="legenda">Caixas de Som</p>
+        </a>
+    </div>
+</div>
+
+<div class="flexbox" fxLayout="row" fxLayoutAlign="center center">
+    <div fxFlex="40%">
+        <img class="img2" src="assets/img/joysticks.png" alt="">
+        <a href="" class="link">
+            <p class="legenda">Joysticks</p>
+        </a>
+    </div>
+    <div fxFlex="40%">
+        <img class="img2" src="assets/img/micros.png" alt="">
+        <a href="" class="link">
+            <p class="legenda">Microfones</p>
+        </a>
+    </div>
+</div>
+
+<div class="flexbox" fxLayout="row" fxLayoutAlign="center center">
+    <div fxFlex="40%">
+        <img class="img2" src="assets/img/mouse pad.png" alt="">
+        <a href="" class="link">
+            <p class="legenda">Mouses Pad</p>
+        </a>
+    </div>
+    <div fxFlex="40%">
+        <img class="img2" src="assets/img/suportes.png" alt="">
+        <a href="" class="link">
+            <p class="legenda">Suportes</p>
+        </a>
+    </div>
+</div>
+
+
+
+<!--
+    <section class="flexbox">
     <div>
         <a href="" class="img1">
             <img src="assets/img/adaptadores.png" alt="">
@@ -63,3 +112,4 @@
         </a>
     </div>
 </section>
+-->
