--- a/ang-game/src/app/views/index1/index1.component.css
+++ b/ang-game/src/app/views/index1/index1.component.css
@@ -1,12 +1,13 @@
 body, ul, li, p{
-    margin: 0px;
-    padding: 0px;
+
     list-style: none;
     font-size: 15pt;
     font-family: sans-serif;
 }
 .h11{
-    margin-top: 10px;
+    text-align: center;
+    margin-top: 40px;
+    font-size: xx-large;
 }
 .link{
     text-decoration: none;
@@ -20,45 +21,19 @@ body, ul, li, p{
     color: black;
 }
 
+
 /*FLEXBOX*/
 .flexbox{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    max-width: 1200px;
-    justify-content: space-around;
-}
-.flexbox > div{
-    flex: 1 1 100px;
-    margin: 10px;
+    max-width: 100%;
+    margin-bottom: 100px;
 }
 .img1{
     width: 500px;
     height: 400px;
-    border-bottom: 10px solid chartreuse;
+    border-bottom:10px solid chartreuse;
 }
 .img2{
     width: 490px;
     height: 399px;
-    border-bottom: 10px solid chartreuse;
+    border-bottom:10px solid chartreuse;
 }
-.img3{
-    width: 400px;
-    height: 460px;
-    border-bottom: 10px solid chartreuse;
-}
-.img4{
-    margin-left: 40px;
-    height: 460px;
-    border-bottom: 10px solid chartreuse;
-}
-.img5{
-    height: 460px;
-    border-bottom: 10px solid chartreuse;
-}
-.img6, .img7{
-    width: 450px;
-    height: 400px;
-    border-bottom: 10px solid chartreuse;
-}
-
