--- a/ang-game/src/app/app.component.html
+++ b/ang-game/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-carousel></app-carousel>
 <app-home></app-home>
 <app-index1></app-index1>
+<app-index2></app-index2>
 <app-footer></app-footer>
