--- a/ang-game/src/app/views/index2/index2.component.html
+++ b/ang-game/src/app/views/index2/index2.component.html
@@ -1,1 +1,89 @@
-<p>index2 works!</p>
+<h1>N O V I D A D E S</h1>
+
+
+<mat-card class="example-card">
+    <img mat-card-image src="assets/img/game.png" alt="">
+    <mat-card-content>
+        <h3>CELULARES MAIS POTENTES</h3>
+        <p>
+            A corrida para os super-celulares acontece cada vez mais rápida pelos grandes players.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+    </mat-card-actions>
+</mat-card>
+
+
+
+
+
+<mat-card class="example-card">
+    <img mat-card-image src="assets/img/game-console.png" alt="">
+    <mat-card-content>
+        <h3>Artes e Jogos lado-a-lado</h3>
+        <p>
+            Conheça como artistas web-designers estão revolucionando a temática gamer.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+    </mat-card-actions>
+</mat-card>
+
+
+
+
+<mat-card class="example-card">
+    <img mat-card-image src="assets/img/minecraft.png" alt="">
+    <mat-card-content>
+        <h3>Construa seus castelos</h3>
+        <p>
+            Dicas e macetes de como você mesmo construir seus prédios e castelos no Minecraft.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+          <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+    </mat-card-actions>
+</mat-card>
+
+
+<mat-card class="example-card">
+    <img mat-card-image src="assets/img/cars.png" alt="">
+    <mat-card-content>
+        <h3>Velocidade total pra você!</h3>
+        <p>
+                Acelere muito com a nova versão do jogo Necessito de Velocidade 2022.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+        </mat-card-actions>
+    </mat-card>    
+
+<mat-card class="example-card">
+    <img mat-card-image src="assets/img/las-vegas.png" alt="">
+    <mat-card-content>
+        <h3>Feira Gamer Las Vegas</h3>
+        <p>
+            Por dentro de tudo o que está rolando na principal Feira Gamer do Planeta.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+    </mat-card-actions>
+</mat-card>  
+    
+
+<mat-card class="example-card">
+    <img mat-card-image src="assets/img/virtual eyewear.png" alt="">
+        <mat-card-content>
+        <h3>Realidade nada-virtual</h3>
+        <p>
+            O Metaverso chega com a promessa de fazer o virtual se tornar real.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+    </mat-card-actions>
+</mat-card> 
