--- a/ang-game/src/app/views/header/header.component.css
+++ b/ang-game/src/app/views/header/header.component.css
@@ -17,12 +17,12 @@
     padding-left: 350px;
 }
 .header .box{
-    display: flex;
     margin-left: 440px;
-    padding: 10px;
     color: red;
+    vertical-align: middle;
 }
 .box{
     border-radius: 10px;
     height: 50px;
+    background-color: white;
 }
