--- a/ang-game/src/app/views/carousel/carousel.component.html
+++ b/ang-game/src/app/views/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel>
+<ngb-carousel class="carousel">
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
         <a href="#">
