--- a/ang-game/src/app/views/carousel/carousel.component.css
+++ b/ang-game/src/app/views/carousel/carousel.component.css
@@ -1,14 +1,20 @@
 ngb-carousel {
     max-width: 90%;
     margin: 30px auto;
+    position: relative;
+}
+.carousel{
+    margin-top: 80px;
 }
 ngb-carousel img {
     width: 100%;
     outline: none;
+    position: relative;
 }
 ngb-carousel {
     width: inherit;
     height: inherit;
+    position: relative;
 }
 ngb-carousel a{
     text-decoration: none;
@@ -22,19 +28,24 @@ ngb-carousel a{
     visibility: hidden;
     transition: opacity 0.5s ease-in-out, visibility 0.5s;
     z-index: -1;
+    position: relative;
 }
 .carousel-item.active{
     opacity: 1;
     visibility: visible;
     z-index: 10;
+    position: relative;
 }
 .carousel-control-prev {
-     z-index: 20;
+    z-index: 20;
+    position: relative;
 }
 
 .carousel-control-next {
-     z-index: 20;
+    z-index: 20;
+    position: relative;
 }
 .carousel-indicators{
     z-index: 20;
+    position: relative;
 }
