--- a/ang-game/src/app/views/header/header.component.css
+++ b/ang-game/src/app/views/header/header.component.css
@@ -1,20 +1,33 @@
+a, ul, li{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style-type: none;
+}    
+
 .header{
-    display: flex;
+    position: fixed;
+    top: 0;
+    height: 55px;
     align-items: center;  
     background-image: linear-gradient(#218EF2, black);
 }
 .header a{
-    display: flex;
     align-items: center;
     text-decoration: none;
 }
 
 .header .joy{
-    max-height: 60px;
+    height: 70%;
+    width: 70%;
 }
 
 .header .title{
-    padding-left: 350px;
+    padding-left: 360px;
+}
+.header .logoo{
+    height: 90%;
+    width: 90%;
 }
 .header .box{
     margin-left: 440px;
@@ -23,6 +36,6 @@
 }
 .box{
     border-radius: 10px;
-    height: 50px;
+    height: 45px;
     background-color: white;
 }
