--- a/ang-game/src/app/views/index2/index2.component.html
+++ b/ang-game/src/app/views/index2/index2.component.html
@@ -10,7 +10,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-        <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+        <button style="background-color: black; color: white; border: 1px solid blue; position: inherit;" mat-button>SAIBA MAIS</button>
         </mat-card-actions>
     </mat-card>
 
@@ -27,7 +27,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-        <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+        <button style="background-color: black; color: white; border: 1px solid blue; position: inherit;" mat-button>SAIBA MAIS</button>
         </mat-card-actions>
     </mat-card>
 
@@ -43,7 +43,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-            <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+            <button style="background-color: black; color: white; border: 1px solid blue; position: inherit;" mat-button>SAIBA MAIS</button>
         </mat-card-actions>
     </mat-card>
 
@@ -57,9 +57,9 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-            <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
-            </mat-card-actions>
-        </mat-card>    
+            <button style="background-color: black; color: white; border: 1px solid blue; position: inherit;" mat-button>SAIBA MAIS</button>
+        </mat-card-actions>
+    </mat-card>    
 
     <mat-card class="example-card">
         <img mat-card-image src="assets/img/las-vegas.png" alt="">
@@ -70,7 +70,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-            <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+            <button style="background-color: black; color: white; border: 1px solid blue; position: inherit;" mat-button>SAIBA MAIS</button>
         </mat-card-actions>
     </mat-card>  
         
@@ -84,7 +84,7 @@
             </p>
         </mat-card-content>
         <mat-card-actions>
-            <button style="background-color: black; color: white; border: 1px solid blue;" mat-button>SAIBA MAIS</button>
+            <button style="background-color: black; color: white; border: 1px solid blue; position: inherit;" mat-button>SAIBA MAIS</button>
         </mat-card-actions>
     </mat-card>
 </div>
