--- a/ang-game/src/app/views/index1/index1.component.css
+++ b/ang-game/src/app/views/index1/index1.component.css
@@ -1,5 +1,4 @@
 body, ul, li, p{
-
     list-style: none;
     font-size: 15pt;
     font-family: sans-serif;
@@ -26,6 +25,7 @@ body, ul, li, p{
 .flexbox{
     max-width: 100%;
     margin-bottom: 100px;
+    position:inherit;
 }
 .img1{
     width: 500px;
