--- a/ang-game/src/app/views/carousel/carousel.component.html
+++ b/ang-game/src/app/views/carousel/carousel.component.html
@@ -1,8 +1,8 @@
 <ngb-carousel class="carousel">
-    <ng-template ngbSlide>
+    <ng-template class="template" ngbSlide>
       <div class="picsum-img-wrapper">
         <a href="#">
-            <img src="assets/img/banner22.jpg" alt="Angular Carousel 1">
+            <img class="image" src="assets/img/banner22.jpg" alt="Angular Carousel 1">
         </a>
       </div>
       <div class="carousel-caption">
@@ -12,10 +12,10 @@
         </a>
       </div>
     </ng-template>
-    <ng-template ngbSlide>
+    <ng-template class="template" ngbSlide>
       <div class="picsum-img-wrapper">
         <a href="#">
-            <img src="assets/img/banner33.jpg" alt="Angular Carousel 2">
+            <img class="image" src="assets/img/banner33.jpg" alt="Angular Carousel 2">
         </a>
       </div>
       <div class="carousel-caption">
@@ -27,10 +27,10 @@
         </a>
       </div>
     </ng-template>
-    <ng-template ngbSlide>
+    <ng-template class="template" ngbSlide>
       <div class="picsum-img-wrapper">
         <a href="#">
-         <img src="assets/img/banner44.jpg" alt="Angular Carousel 2">
+         <img class="image" src="assets/img/banner44.jpg" alt="Angular Carousel 2">
          </a>
       </div>
       <div class="carousel-caption">
