--- a/ang-game/src/app/views/home/home.component.css
+++ b/ang-game/src/app/views/home/home.component.css
@@ -112,3 +112,11 @@ ul{
     width: 220px;
     height: 260px;
 }
+
+@media screen and (max-width:1200px) {
+    .header{
+        width: 100%;
+        height: 70px;
+    } 
+    
+}
