--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -50,7 +50,7 @@
     </li>
 </ul>
 
-<a href="#" style="text-decoration: none; color: black; font-size:larger;align-items: center;"><p class="more">ver mais</p></a>
+<a href="#" style="text-decoration: none; color: black; font-size:larger; text-align: center;"><p class="more">ver mais</p></a>
 
 <!-- SEÇÃO INFORMÁTICA -->
 <p class="info">I N F O R M Á T I C A</p>
