--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -106,7 +106,7 @@
 <a href="#" style="text-decoration: none;color: black;font-size:larger;align-items: center;"><p class="more">ver mais</p></a>
 
 <!-- SEÇÃO PROMOÇÕES -->
-<p style="text-align: center; margin-bottom: 50px" class="promo">P R O M O Ç Õ E S </p>
+<p class="promo">P R O M O Ç Õ E S </p>
 <ul class="cont-promo">
     <li>
         <a href="" style="text-decoration: none; color:black">
