--- a/ang-game/src/app/views/header/header.component.css
+++ b/ang-game/src/app/views/header/header.component.css
@@ -17,15 +17,15 @@ a, ul, li{
     text-decoration: none;
 }
 
-.header .joy{
-    height: 70%;
-    width: 70%;
+.joy{
+    height: 50px;
+    width: 60px;
 }
 
-.header .title{
+.title{
     padding-left: 360px;
 }
-.header .logoo{
+.logoo{
     height: 90%;
     width: 90%;
 }
@@ -38,4 +38,15 @@ a, ul, li{
     border-radius: 10px;
     height: 45px;
     background-color: white;
+}
+
+@media screen and (max-width: 768px) {
+    .position-header, .position-footer{
+        width: 100%;
+        position: fixed;
+    }
+    .joy{
+        height: 45px;
+        width: 40px;
+    }
 }
