--- a/ang-game/src/app/views/home/home.component.css
+++ b/ang-game/src/app/views/home/home.component.css
@@ -15,11 +15,19 @@ ul{
     flex-wrap: wrap;
     margin-left: auto; margin-right: auto;
 }
+
 .gamer{
     text-align: center;
     margin-top: 40px;
     font-size: xx-large;
 }
+.info, .promo{
+    text-align: center;
+    font-size: 20pt;
+    margin-top: 80px;
+}
+
+ 
 
 .link1{
     text-decoration: none;
@@ -50,12 +58,7 @@ ul{
     border-width: 1px; width: 80px; align-items: center;
     margin-left: 635px; border-radius: 5px; 
 }
-.info{
-    text-align: center;
-    font-size: 20pt;
-    margin-top: 80px;
-}
- 
+
 .memoria .nobreak{
     margin-top: 9px;
 }
@@ -69,10 +72,6 @@ ul{
     text-align: center;
 }
  
-.promo{
-    font-size: 20pt;
-    margin-top: 80px;
-}
  
  .promo-game{
     text-align: center;
@@ -120,17 +119,8 @@ ul{
 
 
 @media screen and (max-width: 768px){
-    .header{
-        display: flex;
-        width: auto;
-        height: 20px;
-    } 
-    .footer{
-        display: flex;
-        width: auto;
-        height: 10px;
-    }
     .more{
-    margin: auto;
+        margin: auto;
     }
+    
 }
