--- a/ang-game/src/app/views/home/home.component.html
+++ b/ang-game/src/app/views/home/home.component.html
@@ -1,7 +1,7 @@
 <!--SEÇÃO GAMER-->
 <p class="gamer">G A M E R</p>
 <ul class="container">
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p class="legenda">Placa de Vídeo Gainward <br> NVidia GeForce</p>
         </a>
@@ -13,7 +13,7 @@
         </a>
     </li>
 
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p class="legenda">Cadeira Gamer Log Gaming</p>
         </a>
@@ -25,7 +25,7 @@
         </a>
     </li>
 
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p class="legenda">Headset Gamer Motospeed G750</p>
         </a>
@@ -37,7 +37,7 @@
         </a>
     </li>
 
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p class="legenda">Mouse Gamer Havit</p>
         </a>
@@ -55,7 +55,7 @@
 <!-- SEÇÃO INFORMÁTICA -->
 <p class="info">I N F O R M Á T I C A</p>
 <ul class="container">
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p style="text-align: center; font-family: sans-serif;">Computador Desktop Login <br> Intel Core i3 9100 4gb ddr4 <br> ssd 240gb Windows 10</p>
         </a>
@@ -66,7 +66,7 @@
             </a>
     </li>
 
-    <li>
+    <li class="bloco">
         <a href="" class="link1">
             <p style="text-align: center; font-family: sans-serif;">Nobreak TS Shara UPS Senoidal <br> Universal 3200va 2 Baterias Internas <br> Bivolt USB 4450</p>
         </a>
@@ -78,7 +78,7 @@
         </a>
     </li>
 
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p style="text-align: center; font-family: sans-serif;">Processador AMD Athlon 3000g <br> Dual Core 3 <br> 5 ghz Cache 5mb Am4</p>
         </a>
@@ -90,7 +90,7 @@
         </a>
     </li>
 
-    <li>
+    <li class="bloco">
         <a href="#" class="link1">
             <p style="text-align: center; font-family: sans-serif;">Memoria 4gb ddr4 <br> 2666 Mhz Micron Cl19</p>
         </a>
@@ -108,7 +108,7 @@
 <!-- SEÇÃO PROMOÇÕES -->
 <p class="promo">P R O M O Ç Õ E S </p>
 <ul class="cont-promo">
-    <li>
+    <li class="promocao">
         <a href="" style="text-decoration: none; color:black">
             <p class="promo-game">
                 BATTLEFIELD
@@ -120,7 +120,7 @@
         </a>
     </li>
 
-    <li>
+    <li class="promocao">
         <a href="" style="text-decoration: none; color:black">
             <p class="promo-game">
                 COUNTER STRIKE GO
